Project

General

Profile

Actions

Bug #2997

closed

Patch for ext/tk/extconf.rb X11 build failure on NetBSD 5

Bug #2997: Patch for ext/tk/extconf.rb X11 build failure on NetBSD 5

Added by skandragon (Michael Graff) over 16 years ago. Updated over 15 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 1.9.2dev (2010-03-24 trunk 27027) [i386-netbsdelf5.0.]
Backport:
[ruby-core:28901]

Description

=begin
[submitted directly to the ruby-core list, but I understand this is the preferred path]

I'm attempting to make ruby 1.9.1 build more easily/cleanly on NetBSD 5,
and ran into a problem inside ext/tk. Provided is a patch that does two
things:

(1) Fixes what I believe is a cut and paste error. In places,
TclConfig_Info['TK...'] is used where I I belive these should be
TkConfig_Info[].

(2) Adds includes from TK_XINCLUDES if we found X11 libraries, AND it
is set, to the build command line.

These make things compile on NetBSD. I do not have commit access so
it's not easy to test these on other OSs (MacOS is the only one I have
easy access to) but I do not believe they should affect other systems
negatively.
=end


Files

ruby.ext.tk.diff (1.76 KB) ruby.ext.tk.diff skandragon (Michael Graff), 03/24/2010 03:40 AM

Updated by naruse (Yui NARUSE) over 16 years ago Actions #1

  • Status changed from Open to Assigned
  • Assignee set to nagai (Hidetoshi Nagai)

=begin

=end

Updated by nagai (Hidetoshi Nagai) over 16 years ago Actions #2

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

=begin
This issue was solved with changeset r27055.
Michael, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.

=end

Actions

Also available in: PDF Atom