ext/tk/lib/tkextlib/version.rb
@@ -2,5 +2,5 @@
 # release date of tkextlib
 #
 module Tk
-  Tkextlib_RELEASE_DATE = '2009-07-12'.freeze
+  Tkextlib_RELEASE_DATE = '2010-02-01'.freeze
 end
